--- a/axelor-gst/src/main/resources/views/Menu.xml
+++ b/axelor-gst/src/main/resources/views/Menu.xml
@@ -5,23 +5,10 @@
   http://axelor.com/xml/ns/object-views/object-views_5.0.xsd">
 
 
-	<menuitem name="gst-root" title="GST Application" order="-90"
+	<menuitem name="gst-root" title="GST" order="-90"
 		tag-get="com.axelor.mail.web.MailController:inboxMenuTag()"
 		tag="Application" tag-style="info" icon="fa-book"
 		icon-background="green" />
-
-	<menuitem name="gst-root-product" title="Product"
-		parent="gst-root" />
-		
-	<menuitem name="product-root-product"
-		parent="gst-root-product" title="Product"
-		action="action.product.view.product" />
-	<action-view name="action.product.view.product"
-		title="Product" model="com.axelor.apps.base.db.Product">
-		<view type="grid" name="product-grid" />
-		<view type="form" name="product-form" />
-	</action-view>
-
 
 </object-views>
 
