--- a/axelor-gst/src/main/resources/views/Address.xml
+++ b/axelor-gst/src/main/resources/views/Address.xml
@@ -7,6 +7,7 @@
 		<toolbar>
 			<button name="checkDuplicateBtn" title="Check Duplicate" onClick="action-base-method-show-duplicate"/>
 		</toolbar>
+		<field name="type"/>
 		<field name="fullName" />
 		<button name="mapBtn" icon="fa-map-marker" onClick="action-base-address-method-view-map" />
 		<button name="directionsBtn" icon="fa-location-arrow" onClick="action-base-address-method-view-direction" />
@@ -15,7 +16,8 @@
 	<form name="address-form" title="Address" model="com.axelor.apps.base.db.Address" id="address-form-id"
 	onSave="action-group-base-address-onsave,save,action-base-address-method-update-lat-long"  onNew="default-address-record" width="large" >
 		<panel name="mainPanel" title="Address details" colSpan="12">
-			<field name="addressL7Country" onChange="action-address-record-clear-fields" required="true" canEdit="false" form-view="country-form" grid-view="country-grid" colSpan="12"/>
+			<field name="type"/>
+			<field name="addressL7Country" onChange="action-address-record-clear-fields" required="true" canEdit="false" form-view="country-form" grid-view="country-grid" colSpan="6"/>
 			<field name="addressL2" x-bind="{{addressL2|uppercase}}" placeholder="e.g. Financial department, CEO"/>
 			<field name="addressL3" x-bind="{{addressL3|uppercase}}" placeholder="e.g. Building A, Entry 2, 2nd Floor, Door 2E"/>
 			<field name="addressL4" x-bind="{{addressL4|uppercase}}"/>
@@ -23,7 +25,6 @@
 			<field name="zip"/>
 			<field name="city" onSelect="action-address-attrs-update-domain-city" canEdit="false" canNew="true" onChange="action-address-change-city" form-view="city-form" grid-view="city-grid"/>
 			<field name="state"/>
-			<field name="addressL7Country"/>
 			<field name="addressL6" x-bind="{{addressL6|uppercase}}" required="true" colSpan="12"/>
 			<static name="addressL6Text" colSpan="12">Notice: The Zip/City field is automatically filled when the city is selected. You can change it when the Zip/City pair is missing or in case of minor change.</static>
 			<button-group name="map1BtnGroup" colSpan="6" hideIf="$popup()">
@@ -50,7 +51,8 @@
 	<form name="address-partner-address-form" title="Address" model="com.axelor.apps.base.db.Address" 
 	onSave="action-group-base-address-onsave,save,action-base-address-method-create-partner-address,action-base-address-method-update-lat-long"  onNew="default-address-record" width="large" >
 		<panel name="mainPanel" title="Address details" colSpan="12">
-			<field name="addressL7Country" onChange="action-address-record-clear-fields" required="true" canEdit="false" form-view="country-form" grid-view="country-grid" colSpan="12"/>
+			<field name="type"/>
+			<field name="addressL7Country" onChange="action-address-record-clear-fields" required="true" canEdit="false" form-view="country-form" grid-view="country-grid" colSpan="6"/>
 			<field name="addressL2" x-bind="{{addressL2|uppercase}}" placeholder="e.g. Financial department, CEO"/>
 			<field name="addressL3" x-bind="{{addressL3|uppercase}}" placeholder="e.g. Building A, Entry 2, 2nd Floor, Door 2E"/>
 			<field name="addressL4" x-bind="{{addressL4|uppercase}}"/>
