--- a/axelor-gst/src/main/resources/views/InvoiceLine.xml
+++ b/axelor-gst/src/main/resources/views/InvoiceLine.xml
@@ -74,7 +74,7 @@
 		<panel-tabs name="mainPanelTab" hideIf="typeSelect == 1">
 			<panel name="informationsPanel" title="Information">
 				<field name="product" canEdit="false"
-					onChange="action-invoiceLine-set-product-value,action-group-account-invoice-line-product-onchange"
+					onChange="action-invoiceLine-set-product-value,action-group-account-invoice-line-product-onchange,action-invoiceLine-generate-method-calculatedfieldvalue"
 					onSelect="action-invoice-line-attrs-set-product-domain-onselect"
 					form-view="product-form" grid-view="product-grid" />
 				<field name="$isFilterOnSupplier" title="Filter on supplier"
@@ -92,7 +92,7 @@
 				<field name="hsbn" colSpan="3" />
 				<field name="qty" colSpan="3" required="true"
 					readonlyIf="isSubLine"
-					onChange="action-group-account-invoice-line-qty-onchange" />
+					onChange="action-group-account-invoice-line-qty-onchange,action-invoiceLine-generate-method-calculatedfieldvalue" />
 				<field name="unit" colSpan="3" canEdit="false"
 					form-view="unit-form" grid-view="unit-grid"
 					readonlyIf="typeSelect == 2 || isSubLine" />
@@ -248,12 +248,12 @@
 		<panel-tabs name="mainPanelTab" hideIf="typeSelect == 1">
 			<panel name="informationsPanel" title="Informations">
 				<field name="product"
-					onChange="action-invoiceLine-set-product-value,action-group-account-invoice-line-product-onchange"
+					onChange="action-invoiceLine-set-product-value,action-group-account-invoice-line-product-onchange,action-invoiceLine-generate-method-calculatedfieldvalue"
 					form-view="product-form" grid-view="product-grid" canView="false" />
 				<field name="productName" requiredIf="!typeSelect == 1" />
 				<field name="hsbn" colSpan="3" />
 				<field name="qty" required="true"
-					onChange="action-group-account-invoice-line-qty-onchange" />
+					onChange="action-group-account-invoice-line-qty-onchange,action-invoiceLine-generate-method-calculatedfieldvalue" />
 				<field name="price" required="true"
 					onChange="action-invoice-line-method-onchange-price,action-invoice-line-method-compute,action-invoice-line-method-compute-analytic-distribution"
 					hidden="true" />
@@ -294,4 +294,11 @@
 			expr="eval: product.hsbn" if="product" />
 		<attribute for="hsbn" name="value:set" expr="" if="!product" />
 	</action-attrs>
+	
+		<action-method
+		name="action-invoiceLine-generate-method-calculatedfieldvalue">
+		<call class="com.axelor.gst.web.InvoiceLineController"
+			method="calculatedFieldValue" />
+	</action-method>
+	
 </object-views>
