--- a/axelor-gst/src/main/resources/views/Product.xml
+++ b/axelor-gst/src/main/resources/views/Product.xml
@@ -11,6 +11,7 @@
 				onClick="action.report.attachment.setproductreportvalue,print.report.product.details"
 				icon="fa-print" />
 			<button name="btnCreateInvoice" title="Create Invoice"
+				onClick="action.report.attachment.setproductreportvalue,action.wizard.select.party"
 				icon="fa-rocket" />
 		</toolbar>
 		<field name="code" x-bind="{{code|unaccent|uppercase}}"
@@ -581,7 +582,39 @@
 			<mail-messages />
 		</panel-mail>
 	</form>
-
+	
+	<form name="invoice-wizard-party-select-form"
+		title="invoice-wizard-Form" model="com.axelor.apps.account.db.Invoice">
+		<panel title="Select Partner">
+			<field name="partner" type="many-to-one"
+				x-target="com.axelor.apps.account.db.Partner" x-target-name="partner" />
+			<field name="address" type="many-to-one"
+				x-target="com.axelor.apps.account.db.Address" x-target-name="address"/>
+			<button name="buttonSelectParty" readonlyIf="!partner"
+				onClick="action.wizard.invoice.view.create.invoice,close"
+				title="Submit" />
+		</panel>
+	</form>
+	
+	<action-view name="action.wizard.select.party"
+		title="Create-Invoice" model="com.axelor.apps.account.db.Invoice">
+		<view type="form" name="invoice-wizard-party-select-form" />
+		<view-param name="popup" value="true" />
+		<view-param name="show-toolbar" value="false" />
+		<view-param name="show-confirm" value="false" />
+		<view-param name="popup-save" value="false" />
+		<context name="idList" expr="eval: idList" />
+	</action-view>
+	<action-view
+		name="action.wizard.invoice.view.create.invoice"
+		title="Create-Invoice" model="com.axelor.apps.account.db.Invoice">
+		<view type="form" name="invoice-form" />
+		<view-param name="reload-dotted" value="true" />
+		<context name="idList" expr="eval: idList" />
+		<context name="partnerId" expr="eval: partner.id" />
+		<context name="addressId" expr="address.id"/>
+	</action-view>
+	
 	<action-method
 		name="action.report.attachment.setproductreportvalue">
 		<call class="com.axelor.gst.web.ProductController"
